# spitclock

./: .gitignore  README.md  config.json  pyproject.toml
docs/: SpitClock_Windows_Setup.html  index.html  style.css  windows_setup_guide.md
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ConnectionStatus.tsx  DeployButton.tsx  LEDRingPreview.tsx  ProgramEditor.tsx  ScheduleTimeline.tsx
frontend/src/hooks/: useConnection.ts  usePreview.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
pi/: clock.py
scripts/: add_wifi.py  install.bat  install.sh
server/: app.py  config_store.py  models.py  ssh_client.py
server/api/: connection.py  deploy.py  preview.py  programs.py  schedule.py
